@@ -164,6 +164,7 @@
 		<password></password>
 		<provider></provider>
 		<!--
+		<mtu></mtu>
 		<dnsnosec/>
 		-->
 	</pppoe>
@@ -218,8 +219,6 @@
 			<staticmap>
 				<mac>xx:xx:xx:xx:xx:xx</mac>
 				<ipaddr>xxx.xxx.xxx.xxx</ipaddr>
-				<next-server></next-server>
-				<filename></filename>
 				<descr></descr>
 			</staticmap>
 			-->
